--- a/src/views/home.html
+++ b/src/views/home.html
@@ -83,4 +83,12 @@
     </div>
     {/loop}
   </div>
+
+  <div class="row">
+    <div class="col-md-12 col-lg-12 col-sm-12 d-flex justify-content-center mt-5">
+      <a class="btn btn-compra" href="/bioloOnline/products">
+        Ver mais produtos
+      </a>
+    </div>
+  </div>
 </div>
