route for add product into cart

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -74,7 +74,7 @@
           <p><span class="preco">{$value.preco}kz</span></p>
           <p><i class="fi-rr-heart">307</i></p>
           {if="$globalProviderId !== $value.fornecedor_id"}
-          <a href="/bioloOnline/add-cart/{$value.id}" class="btn btn-login">
+          <a href="/bioloOnline/purchase/{$value.id}/" class="btn btn-login">
             Comprar
           </a>
           {/if}
