--- a/src/views/product-detail.html
+++ b/src/views/product-detail.html
@@ -55,7 +55,7 @@
             data-target="#exampleModal"  
           -->
           {if="$globalProviderId !== $value.fornecedor_id"}
-          <a href="/bioloOnline/add-cart/{$value.id}" class="btn btn-login">
+          <a href="/bioloOnline/purchase/{$value.id}/" class="btn btn-login">
             Comprar
           </a>
           {/if}
