--- a/src/views/products.html
+++ b/src/views/products.html
@@ -61,7 +61,7 @@
                 <p><i class="fi-rr-heart">307</i></p>
                 {if="$globalProviderId !== $value.fornecedor_id"}
                 <a
-                  href="/bioloOnline/add-cart/{$value.id}"
+                  href="/bioloOnline/purchase/{$value.id}/"
                   class="btn btn-login"
                 >
                   Comprar
