add get total product function

--- a/src/views/shared/Header/header.html
+++ b/src/views/shared/Header/header.html
@@ -53,7 +53,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/bioloOnline/cart"
-          >Carrinho({function="GetTotalProductsIntoCart($client[0]["id"] ?? $provider[0]["id"] ?? 0)"})</a
+          >Carrinho({function="GetTotalProductsIntoCart($client[0]["id"] ?? 0, $provider[0]["id"] ?? 0)"})</a
         >
       </li>
 
