--- a/src/views/profile-provider.html
+++ b/src/views/profile-provider.html
@@ -66,14 +66,14 @@
 
             <div class="card col-sm-12 col-md-3" style="width: 18rem">
               <a href="/bioloOnline/product/{$value.produto_id}/details/{$providerId}">
-                <img
-                  class="card-img-top"
+                <img style="height: 260px;"
+                  class="pro d-flex flex-column justify-content-between"
                   src="/bioloOnline/src/resources/{$value.foto}"
                   alt="{$value.descricao}"
                 />
               </a>
               <div
-                class="card-body d-flex justify-content-between"
+                class="d-flex justify-content-between"
                 style="margin: 0"
               >
                 <p class="card-text">{$value.nome}</p>                
