--- a/src/views/home.html
+++ b/src/views/home.html
@@ -64,7 +64,7 @@
         <a
           href="/bioloOnline/product/{$value.id}/details/{$value.fornecedor_id}"
         >
-          <img
+          <img style="height:260px;"
             class="img-fluid"
             src="/bioloOnline/src/resources/{$value.foto}"
           />
