--- a/src/views/cart.html
+++ b/src/views/cart.html
@@ -12,6 +12,12 @@
 </div>
 {/if} {/if}
 
+{if="$status_code !== 0"} {if="$status_code === 201"}
+<div class="alert alert-success" role="alert">
+  Produto removido com sucesso!.
+</div>
+{/if} {/if}
+
 <div id="carrinho" class="">
   <div class="container">
     <div class="row" style="color: aliceblue">
@@ -48,7 +54,7 @@
               <td>
                 <div class="row">
                   <span class="ren-" style="padding: 4px; background: rgb(53, 50, 50);">
-                    <a href="/bioloOnline/cart?ac=rem">-</a>
+                    <a href="/bioloOnline/cart?ac=rem&qtd={$value.quantidade}&prd={$value.id}">-</a>
                   </span>
                   <input
                     type="number"
@@ -59,7 +65,7 @@
                     disabled
                   />
                   <span class="add-" style="padding: 4px; background: rgb(53, 50, 50);">
-                    <a href="/bioloOnline/cart?ac=add">+</a>
+                    <a href="/bioloOnline/cart?ac=add&qtd={$value.quantidade}&prd={$value.id}">+</a>
                   </span>
                 </div>
               </td>
@@ -70,7 +76,11 @@
                 <span class="#">{$value.total}kz</span>
               </td>
               <td>
-                <a href="">X</a>
+                <a 
+                 href="/bioloOnline/purchase/{$value.id}/delete" 
+                 onclick="return confirm('Are you sure you want to delete this product?')" >
+                 X
+                </a>
               </td>
             </tr>
             {/loop}
