--- a/src/views/email/purchase-provider-admin.html
+++ b/src/views/email/purchase-provider-admin.html
@@ -209,8 +209,8 @@ a[x-apple-data-detectors='true'] {
     <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 14px; line-height: 22.4px;">
       <span style="color: #24252d;">Cliente: {function="DecodeToUtf8($provider)"}</span> </span></p>
   <p style="font-size: 14px; line-height: 160%;"><span style="font-size: 14px; line-height: 22.4px;">    
-      {function="DecodeToUtf8($products[0]['fornecedor_email'])"}
-      ({function="DecodeToUtf8($products[0]['fornecedor_contacto'])"}),          
+      {function="DecodeToUtf8($products[0]['fornecedor_venda_email'])"}
+      ({function="DecodeToUtf8($products[0]['fornecedor_venda_contacto'])"}),          
   </span></p>
   </div>
 
