--- a/src/views/cart.html
+++ b/src/views/cart.html
@@ -20,7 +20,7 @@
 
 {if="$status_code !== 0"} {if="$status_code === 202"}
 <div class="alert alert-success" role="alert">
-  Reserva efectuada sucesso!.
+  Reserva efectuada sucesso, verifique a reserva no teu email!.
 </div>
 {/if} {/if}
 
