update views page

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -37,7 +37,7 @@
               href="/bioloOnline/profile-provider/{$value.id}"
               >{$value.nome}</a
             >
-            <span>2.99</span>
+            <span>Vendedor</span>
           </div>
           {/loop}
         </div>
@@ -71,8 +71,7 @@
         </a>
         <span class="nome-produto">{$value.product_name}</span>
         <div class="info-produto my-2">
-          <p><span class="preco">{$value.preco}kz</span></p>
-          <p><i class="fi-rr-heart">307</i></p>
+          <p><span class="preco">{$value.preco}kz</span></p>          
           {if="$globalProviderId !== $value.fornecedor_id"}
           <a href="/bioloOnline/purchase/{$value.id}/" class="btn btn-login">
             Comprar
