--- a/src/views/provider.html
+++ b/src/views/provider.html
@@ -44,7 +44,7 @@
                 href="/bioloOnline/profile-provider/{$value.id}"
                 >{$value.nome}</a
               >
-              <span>2.99</span>
+              <span>Vendedor</span>
             </div>
             {/loop}
           </div>
