--- a/src/views/home.html
+++ b/src/views/home.html
@@ -2,10 +2,10 @@
 <section id="banner">
   <div class="container">
     <div class="img-banner col-md-12">
-      <h1>
+      <!-- <h1>
         Encontre as melhores marcas <br />
         que gostarias de vestir!...
-      </h1>
+      </h1> -->
     </div>
   </div>
 </section>
@@ -73,7 +73,7 @@
         <span class="nome-produto">{$value.product_name}</span>
         <div class="info-produto my-2">
           <p><span class="preco">{$value.preco}kz</span></p>                    
-          <a href="/bioloOnline/purchase/{$value.id}/" class="btn btn-login">
+          <a href="/bioloOnline/purchase/{$value.id}/" class="btn btn-login" style="width:110px;">
             Comprar
           </a>          
         </div>
